--- a/src/ExternalDataProcessors/CURLBuilder/Forms/Форма/Form.form
+++ b/src/ExternalDataProcessors/CURLBuilder/Forms/Форма/Form.form
@@ -73,24 +73,129 @@
         <items xsi:type="form:FormGroup">
           <name>СтраницаГлавная</name>
           <id>201</id>
-          <items xsi:type="form:FormField">
-            <name>МетодЗапроса</name>
-            <id>21</id>
+          <items xsi:type="form:FormGroup">
+            <name>Группа1</name>
+            <id>454</id>
+            <items xsi:type="form:FormField">
+              <name>МетодЗапроса</name>
+              <id>21</id>
+              <visible>true</visible>
+              <enabled>true</enabled>
+              <userVisible>
+                <common>true</common>
+              </userVisible>
+              <dataPath xsi:type="form:DataPath">
+                <segments>Объект.МетодЗапроса</segments>
+              </dataPath>
+              <handlers>
+                <event>OnChange</event>
+                <name>МетодЗапросаПриИзменении</name>
+              </handlers>
+              <extendedTooltip>
+                <name>МетодЗапросаРасширеннаяПодсказка</name>
+                <id>23</id>
+                <visible>true</visible>
+                <enabled>true</enabled>
+                <userVisible>
+                  <common>true</common>
+                </userVisible>
+                <type>Label</type>
+                <autoMaxWidth>true</autoMaxWidth>
+                <autoMaxHeight>true</autoMaxHeight>
+                <extInfo xsi:type="form:LabelDecorationExtInfo">
+                  <horizontalAlign>Left</horizontalAlign>
+                </extInfo>
+              </extendedTooltip>
+              <contextMenu>
+                <name>МетодЗапросаКонтекстноеМеню</name>
+                <id>22</id>
+                <visible>true</visible>
+                <enabled>true</enabled>
+                <userVisible>
+                  <common>true</common>
+                </userVisible>
+                <autoFill>true</autoFill>
+              </contextMenu>
+              <type>InputField</type>
+              <editMode>Enter</editMode>
+              <showInHeader>true</showInHeader>
+              <headerHorizontalAlign>Left</headerHorizontalAlign>
+              <showInFooter>true</showInFooter>
+              <extInfo xsi:type="form:InputFieldExtInfo">
+                <autoMaxWidth>true</autoMaxWidth>
+                <autoMaxHeight>true</autoMaxHeight>
+                <wrap>true</wrap>
+                <dropListButton>true</dropListButton>
+                <clearButton>true</clearButton>
+                <chooseType>true</chooseType>
+                <typeDomainEnabled>true</typeDomainEnabled>
+                <textEdit>true</textEdit>
+                <inputHint>
+                  <key>ru</key>
+                  <value>Авто</value>
+                </inputHint>
+              </extInfo>
+            </items>
+            <items xsi:type="form:FormField">
+              <name>ПолучитьТолькоЗаголовки</name>
+              <id>456</id>
+              <visible>true</visible>
+              <enabled>true</enabled>
+              <userVisible>
+                <common>true</common>
+              </userVisible>
+              <dataPath xsi:type="form:DataPath">
+                <segments>Объект.ПолучитьТолькоЗаголовки</segments>
+              </dataPath>
+              <titleLocation>Right</titleLocation>
+              <handlers>
+                <event>OnChange</event>
+                <name>ПолучитьТолькоЗаголовкиПриИзменении</name>
+              </handlers>
+              <extendedTooltip>
+                <name>ПолучитьТолькоЗаголовкиРасширеннаяПодсказка</name>
+                <id>458</id>
+                <visible>true</visible>
+                <enabled>true</enabled>
+                <userVisible>
+                  <common>true</common>
+                </userVisible>
+                <type>Label</type>
+                <autoMaxWidth>true</autoMaxWidth>
+                <autoMaxHeight>true</autoMaxHeight>
+                <extInfo xsi:type="form:LabelDecorationExtInfo">
+                  <horizontalAlign>Left</horizontalAlign>
+                </extInfo>
+              </extendedTooltip>
+              <contextMenu>
+                <name>ПолучитьТолькоЗаголовкиКонтекстноеМеню</name>
+                <id>457</id>
+                <visible>true</visible>
+                <enabled>true</enabled>
+                <userVisible>
+                  <common>true</common>
+                </userVisible>
+                <autoFill>true</autoFill>
+              </contextMenu>
+              <type>CheckBoxField</type>
+              <editMode>Enter</editMode>
+              <showInHeader>true</showInHeader>
+              <headerHorizontalAlign>Left</headerHorizontalAlign>
+              <showInFooter>true</showInFooter>
+              <extInfo xsi:type="form:CheckBoxFieldExtInfo"/>
+            </items>
             <visible>true</visible>
             <enabled>true</enabled>
             <userVisible>
               <common>true</common>
             </userVisible>
-            <dataPath xsi:type="form:DataPath">
-              <segments>Объект.МетодЗапроса</segments>
-            </dataPath>
-            <handlers>
-              <event>OnChange</event>
-              <name>МетодЗапросаПриИзменении</name>
-            </handlers>
+            <title>
+              <key>ru</key>
+              <value>Группа1</value>
+            </title>
             <extendedTooltip>
-              <name>МетодЗапросаРасширеннаяПодсказка</name>
-              <id>23</id>
+              <name>Группа1РасширеннаяПодсказка</name>
+              <id>455</id>
               <visible>true</visible>
               <enabled>true</enabled>
               <userVisible>
@@ -103,34 +208,14 @@
                 <horizontalAlign>Left</horizontalAlign>
               </extInfo>
             </extendedTooltip>
-            <contextMenu>
-              <name>МетодЗапросаКонтекстноеМеню</name>
-              <id>22</id>
-              <visible>true</visible>
-              <enabled>true</enabled>
-              <userVisible>
-                <common>true</common>
-              </userVisible>
-              <autoFill>true</autoFill>
-            </contextMenu>
-            <type>InputField</type>
-            <editMode>Enter</editMode>
-            <showInHeader>true</showInHeader>
-            <headerHorizontalAlign>Left</headerHorizontalAlign>
-            <showInFooter>true</showInFooter>
-            <extInfo xsi:type="form:InputFieldExtInfo">
-              <autoMaxWidth>true</autoMaxWidth>
-              <autoMaxHeight>true</autoMaxHeight>
-              <wrap>true</wrap>
-              <dropListButton>true</dropListButton>
-              <clearButton>true</clearButton>
-              <chooseType>true</chooseType>
-              <typeDomainEnabled>true</typeDomainEnabled>
-              <textEdit>true</textEdit>
-              <inputHint>
-                <key>ru</key>
-                <value>Авто</value>
-              </inputHint>
+            <type>UsualGroup</type>
+            <extInfo xsi:type="form:UsualGroupExtInfo">
+              <group>AlwaysHorizontal</group>
+              <behavior>Auto</behavior>
+              <showLeftMargin>true</showLeftMargin>
+              <united>true</united>
+              <throughAlign>Auto</throughAlign>
+              <currentRowUse>Auto</currentRowUse>
             </extInfo>
           </items>
           <items xsi:type="form:FormGroup">
@@ -7115,6 +7200,23 @@
       <value>Доступно multipart</value>
     </title>
     <id>12</id>
+    <valueType>
+      <types>Boolean</types>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+  </attributes>
+  <attributes>
+    <name>ВозможноПолучатьЗаголовки</name>
+    <title>
+      <key>ru</key>
+      <value>Возможно получать заголовки</value>
+    </title>
+    <id>13</id>
     <valueType>
       <types>Boolean</types>
     </valueType>
